# urban-eureka

./: .gitignore  Makefile  README.md  __main__.py  eureka.yml  pyproject.toml  pytest.ini  requirement.txt
ch02/: __init__.py  first_missing_positive.py  test_first_missing_positive.rst
ch03/: __init__.py  __main__.py  four_sum.py  test_four_sum.rst  test_three_sum.txt  test_three_sum_hash.rst  test_two_sum.rst  test_two_sum_bs.rst  test_two_sum_loop.txt  test_two_sum_loop_o.txt  test_two_sum_pointer.txt  three_sum_hash.py  three_sum_pointer.py  two_sum.py  two_sum_bs.py  two_sum_loop.py  two_sum_loop_o.py  two_sum_pointer.py
ch04/: __init__.py  __main__.py  climb_stairs.py  climb_stairs_matrix.py  fib_dyn.py  fib_matrix.py  test_climb_stairs.rst  test_climb_stairs_matrix.txt  test_fib.txt  test_fib_recur.rst
ch05/: __init__.py  coin_change_array.py  coin_change_hash.py  max_sub_array.py  max_sub_wrong.py  par_equal.py  par_equal_hash.py  test_coin_change.rst  test_coin_change_hash.txt  test_max_sub_array.rst  test_max_sub_wrong.rst  test_par_equal.txt  test_par_equal_hash.txt
ch06/: __init__.py  next_big_number.py  ott_pattern.py  ott_pattern_basic.py  test_next_big_number.rst  test_ott_pattern.txt  test_ott_pattern_simple.txt  test_valid.txt  test_valid_simple.txt  valid_parentheses.py  valid_parentheses_simple.py
ch07/: __init__.py  base.py  num_squares.rb  num_squares_test.rb  pascals_triangle.py  pascals_triangle_optimized.py  perfect_squares.py  smallest_good_base.py  smallest_good_base_math.py  test_base.txt  test_good_base.rst  test_pascals_triangle.rst  (+3 more)
(+64 files in other folders)
