[tool.poetry]
name = "urban-eureka"
version = "0.1.0"
description = ""
authors = ["Mike Wu <masterwujiang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
docutils = "^0.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
